--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,39 +1,65 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Blank </ion-title>
+    <ion-title> Time selector bug </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-content>
+      When the time selector is toggeled some times by clicking on the text
+      fields or buttons, it shows "00:00" from time to time. In this case a new
+      selected value is not submitted when pressing the "done" button.
+    </ion-card-content>
+  </ion-card>
 
-  <div id="container">
-    <ion-button id="trigger">Time</ion-button>
+  <ion-card>
+    <ion-card-content>
+      <ion-note>Takes about 5-15 clicks until the issue is shown</ion-note>
+      <ion-list>
+        <ion-item>
+          <ion-label>Time</ion-label>
+          <ion-input (click)="openModal()" [value]="timeValue"></ion-input>
+        </ion-item>
+      </ion-list>
+      <ion-button id="trigger">Trigger - {{timeValue}}</ion-button>
+      <ion-button (click)="openModal()">Button - {{timeValue}}</ion-button>
+    </ion-card-content>
+  </ion-card>
 
-    <ion-modal
-      #popup
-      trigger="trigger"
-      [showBackdrop]="true"
-      [breakpoints]="[0, modalSize]"
-      [initialBreakpoint]="modalSize"
-      [handle]="false"
-    >
-      <ng-template>
-        <ion-content>
-          <ion-datetime
-            [value]="currentIsoValue"
-            (ionChange)="onSelect($event)"
-            [firstDayOfWeek]="1"
-            [showDefaultButtons]="true"
-            [presentation]="'time'"
-          >
-          </ion-datetime>
-        </ion-content>
-      </ng-template>
-    </ion-modal>
-  </div>
+  <ion-card>
+    <ion-card-content>
+      <ion-note>Takes about 2-4 clicks until the issue is shown</ion-note>
+      <ion-list>
+        <ion-item>
+          <ion-label>Time</ion-label>
+          <input type="text" (click)="openModal()" [value]="timeValue" />
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-modal
+    #popup
+    trigger="trigger"
+    (ionModalDidDismiss)="onClosePopup()"
+    [showBackdrop]="true"
+    [breakpoints]="[0, 0.3]"
+    [initialBreakpoint]="0.3"
+    [handle]="false"
+  >
+    <ng-template>
+      <ion-content>
+        <ion-datetime
+          [value]="timeValue"
+          (ionChange)="onChange($event)"
+          [minuteValues]="[0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55]"
+          [firstDayOfWeek]="1"
+          [showDefaultButtons]="true"
+          [presentation]="'time'"
+        >
+        </ion-datetime>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
